Fixed rate limit; set default to 0ms.

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ function handleExportWorkspace (event) {
     const accessToken = document.getElementById("access_token").value;
     const workspaceId = document.getElementById("workspace_id").value;
     const rateLimit = parseInt(document.getElementById("rate_limit").value);
-    exportWorkspace(accessToken, workspaceId);
+    exportWorkspace(accessToken, workspaceId, rateLimit);
 }
 
 function handleDocumentReady (event) {
@@ -318,7 +318,7 @@ document.addEventListener("DOMContentLoaded", handleDocumentReady);
                 <tr>
                     <td><label for="rate_limit">Rate Limit: Time Between Requests (ms): </label></td>
                     <td>
-                        <input type="number" id="rate_limit" name="rate_limit" value="20" min="0">
+                        <input type="number" id="rate_limit" name="rate_limit" value="0" min="0">
                         <a href="https://developers.asana.com/docs/rate-limits" target="_blank">[?]</a>
                     </td>
                 </tr>
