--- a/index.html
+++ b/index.html
@@ -363,6 +363,6 @@ document.addEventListener("DOMContentLoaded", handleDocumentReady);
             <div id="applicationLog" style="font-family:monospace;white-space:pre;"></div>
         </p>
     </form>
-    <p>Version 1.0.1 &bull; Copyright &copy; 2024 <a href="https://github.com/isaacchua">Isaac Chua</a> &bull; <a href="LICENSE">MIT License</a> &bull; <a href="https://github.com/isaacchua/asana-tools">GitHub</a> &bull; <a href="https://isaacchua.github.io/asana-tools/export-workspace.html">Permalink</a></p>
+    <p>Version 1.0.2 &bull; Copyright &copy; 2024 <a href="https://github.com/isaacchua">Isaac Chua</a> &bull; <a href="LICENSE">MIT License</a> &bull; <a href="https://github.com/isaacchua/asana-tools">GitHub</a> &bull; <a href="https://isaacchua.github.io/asana-tools">Permalink</a></p>
 </body>
 </html>
